# dl_lecture_competition_pub

./: .gitignore  README.md  description.txt  eval.py  main.py  pyproject.toml
configs/: config.yaml
src/: conv_model.py  datasets.py  loss.py  transform.py
