[tool.poetry]
name = "dl-lecture-competition-meg"
version = "0.1.0"
description = ""
authors = ["decfrr"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.11"
torch = "^2.3.1"
torchaudio = "^2.3.1"
torchvision = "^0.18.1"
torchmetrics = "^1.4.0.post0"
einops = "^0.8.0"
mne = "^1.7.1"
hydra-core = "^1.3.2"
wandb = "^0.17.4"
termcolor = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
